Specl NEWS - User visible changes.

* Noteworthy changes in release ?.? (????-??-??) [?]

** New features:

  - Now that this API is stable, there is full documentation for
    `specl.shell` in doc/specl.md.

** Bug fixes:

  - Specl no longer crashes when requiring system libraries (such as
    math, bit32 etc) from examples or spec_helpers.

  - The `--fail-fast` option no longer stops when encountering a failing
    expectation in a pending example.

* Noteworthy changes in release 11 (2014-04-05) [stable]

** New features:

  - Built-in matchers compare nested tables and objects in about 25% of
    the time required previously, and is optimised for tail-call
    elimination for non-tree like structures.

  - Specl now loads a 'spec_helper.lua' from the same directory as the
    spec file being executed into the example environment automatically,
    so there's no need to manually require it from a `before:` block in
    each spec file any more.

  - You can easily run Specl from the top of your source tree without
    any special LUA_PATH munging in Makefiles or wrapper scripts. Just
    set `package.path` and `package.cpath` to find the code being specced
    out in a 'spec_helper.lua' in each directory containing spec files.

  - When invoked with no filename arguments, `specl` will check all your
    specifications, as long as they have names ending in `_spec.yaml` and
    are kept in or somewhere below the `specs/` directory of your project.

  - The report and progress formatters now display file:line:expectation:
    annotations for failed and pending expectations in verbose mode (-v).

  - New command line option `--fail-fast` (or `-1`) to stop checking
    expectations immediately on the first failure, rather than
    continuing and showing all failures.

  - New command line option `--example=PATTERN` (or `-e PATTERN`) to specify
    inclusive filters matched against the fully concatenated YAML